--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ requests==2.20.0
 requests-oauthlib==1.0.0
 rsa==4.0
 six==1.11.0
+SQLAlchemy==1.2.15
 twilio==6.21.0
 TwitterAPI==2.5.7
 urllib3==1.24
